--- a/index.html
+++ b/index.html
@@ -187,14 +187,17 @@
                     <h1 class="collections-page-header">Your collections</h1>
                     <p class="collection-count">You currently have 5 collections</p>
                     <button class="create-collection-cta">
-                        Create New Collection
+                        Create a new collection
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
                     </button>
-                    <div class="create-collection-input-div">
-                        <input class="create-collection-input" type="text" placeholder="Enter your collection name">
-                        <button class="create-collection-btn">Create</button>
+                    <div class="create-collection-input-div hide">
+                        <input class="create-collection-input" type="text" placeholder="Enter your collection name" onkeydown = "if (event.keyCode == 13)
+                        document.querySelector('#create-collection-btn').click()">
+
+                        <button class="create-collection-btn" id="create-collection-btn">Create</button>
                         <svg class="create-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                     </div>
+                    <p class="create-collection-error error"></p>
                     <div class="collections-list">
                         <div class="collection-item" data-selected="true">
                             <p>Collection One</p>
@@ -203,34 +206,7 @@
                             <p>Collection Two</p>
                         </div>
                     </div>
-                    <div class="collection-results hide">
-                        <div class="collection-result-item">
-                            <div class="collection-tweet-user-image">
-                                <img src="./assets/lightning-5511473_640.jpg" alt="">
-                            </div>
-                            <div class="collection-tweet-body">
-                                <div class="collection-tweet-name-div">
-                                    <p class="collection-tw-name-item collection-tweet-name">Name</p>
-                                    <span class="collection-verified material-icons collection-tw-name-item">verified</span>
-                                    <p class="collection-tw-name-item collection-tweet-username">Username &middot; </p>
-                                    <p class="collection-tw-name-item collection-tweet-time">Time</p>
-                                </div>
-                                <p class="collection-tweet-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis doloribus dolores nesciunt ex omnis, veritatis inventore harum atque repudiandae facere, laboriosam beatae earum nisi pariatur quia natus nemo corrupti fugiat.</p>
-                                <div  class="collection-tweet-image">
-                                    <img src="./assets/lightning-5511473_640.jpg" alt="Tweet Media">
-                                </div>
-                                <div>
-                                    <div class="collection-tweet-footer">
-                                        <div class="collection-tweet-metrics">
-                                            <p>Replies:</p>
-                                            <p>Retweets:</p>
-                                            <p>Likes:</p>
-                                        </div>
-                                    </div>
-                                    <p class="replying-to">This tweet is a reply to:</p>
-                                </div>
-                        </div>
-                    </div>
+                    <p class="empty-collection"></p>
                 </div>
                 <div class="search-results hide">
                     <div class=tweet-results-div>
