--- a/index.html
+++ b/index.html
@@ -42,14 +42,11 @@
     </section>
     <section>
         <div class="remove-from-collection-prompt modal hide">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"/></svg>
-            <p>Delete from collection</p>
-            <div class="remove-from-collection-prompt">
-                Are you sure?
-                <div class="remove-prompt-buttons">
-                    <button class="remove-prompt-dont-delete">Don't delete</button>
-                    <button class="remove-prompt-delete">Delete, please</button>
-                </div>
+            <svg class="remove-from-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+            <p>Are you sure?</p>
+            <div class="remove-prompt-buttons">
+                <button class="remove-from-collection-close remove-prompt-dont-delete">Don't delete</button>
+                <button class="remove-prompt-delete">Delete, please</button>
             </div>
         </div>
     </section>
