--- a/index.html
+++ b/index.html
@@ -25,17 +25,25 @@
 <body ontouchstart="">
     <span class="loader hide"></span>
     <!-- Modals -->
+
+    <div class = "screen-fade hide">
+        
+    </div>
+    <div class="session-over-modal modal hide">
+        <svg class="session-over-modal-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+        <p>Your current session expired, please login to continue.</p>
+    </div>
     <section>
         <div class="save-to-collection-prompt modal hide">
             <svg class="save-to-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p class="save-to-collection-header">Your collections</p>
             <div class="save-to-collection-item-div">
-                <p class="save-to-collection-item"> Collection One</p>
+                <p class ="collection-login-prompt">Please login to use this feature</p>
+                <!-- <p class="save-to-collection-item">Collection Two</p>
                 <p class="save-to-collection-item">Collection Two</p>
                 <p class="save-to-collection-item">Collection Two</p>
                 <p class="save-to-collection-item">Collection Two</p>
-                <p class="save-to-collection-item">Collection Two</p>
-                <p class="save-to-collection-item">Collection Two</p>
+                <p class="save-to-collection-item">Collection Two</p> -->
             </div>
         </div>
     </section>
@@ -53,7 +61,7 @@
 
 
     <header>
-        Home
+        <p class="header-text">Home</p>
     </header>
     <main>
         <div class="main-container">
