--- a/index.html
+++ b/index.html
@@ -273,8 +273,58 @@
                     </div>
                 </div>
             </div>
+            <div class="spotlight-container">
+                <div class="home-page-spotlight">
+                    <div class="spotlight-header">
+                        <svg class="light-bulb" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24"><g><rect fill="none" height="24" width="24"/></g><g><g/><path d="M12,3c-0.46,0-0.93,0.04-1.4,0.14C7.84,3.67,5.64,5.9,5.12,8.66c-0.48,2.61,0.48,5.01,2.22,6.56C7.77,15.6,8,16.13,8,16.69 V19c0,1.1,0.9,2,2,2h0.28c0.35,0.6,0.98,1,1.72,1s1.38-0.4,1.72-1H14c1.1,0,2-0.9,2-2v-2.31c0-0.55,0.22-1.09,0.64-1.46 C18.09,13.95,19,12.08,19,10C19,6.13,15.87,3,12,3z M14,19h-4v-1h4V19z M14,17h-4v-1h4V17z M12.5,11.41V14h-1v-2.59L9.67,9.59 l0.71-0.71L12,10.5l1.62-1.62l0.71,0.71L12.5,11.41z"/></g></svg>
+                        <p sclass="spotlight-description"> - this is the main search page</p>
+                    </div>
+                    <p class="spotlight-body">You can search for anything on Twitter right here. From topics to hastags, videos, photos, etc. - just type in the search keyword(s).<br><br>You can select the language and the type of tweet you want.</p>
+                </div>
+            </div>
+
+            <!-- Nav spotlights -->
+            <div class="nav-spotlights hide">
+                <div class="timeline-page-spotlight">
+                    <div class="spotlight-header">
+                        <svg class="light-bulb" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24"><g><rect fill="none" height="24" width="24"/></g><g><g/><path d="M12,3c-0.46,0-0.93,0.04-1.4,0.14C7.84,3.67,5.64,5.9,5.12,8.66c-0.48,2.61,0.48,5.01,2.22,6.56C7.77,15.6,8,16.13,8,16.69 V19c0,1.1,0.9,2,2,2h0.28c0.35,0.6,0.98,1,1.72,1s1.38-0.4,1.72-1H14c1.1,0,2-0.9,2-2v-2.31c0-0.55,0.22-1.09,0.64-1.46 C18.09,13.95,19,12.08,19,10C19,6.13,15.87,3,12,3z M14,19h-4v-1h4V19z M14,17h-4v-1h4V17z M12.5,11.41V14h-1v-2.59L9.67,9.59 l0.71-0.71L12,10.5l1.62-1.62l0.71,0.71L12.5,11.41z"/></g></svg>
+                        <p sclass="spotlight-description"> - this is where you get tweet on a user's timeline.</p>
+                    </div>
+                    <p class="spotlight-body">You can get tweets from any twitter user here. Just type in the twitter username and you're good to go.<br><br>You won't be able to see tweets from private or suspended accounts.</p>
+                </div>
+                <div class="collections-page-spotlight">
+                    <div class="spotlight-header">
+                        <svg class="light-bulb" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24"><g><rect fill="none" height="24" width="24"/></g><g><g/><path d="M12,3c-0.46,0-0.93,0.04-1.4,0.14C7.84,3.67,5.64,5.9,5.12,8.66c-0.48,2.61,0.48,5.01,2.22,6.56C7.77,15.6,8,16.13,8,16.69 V19c0,1.1,0.9,2,2,2h0.28c0.35,0.6,0.98,1,1.72,1s1.38-0.4,1.72-1H14c1.1,0,2-0.9,2-2v-2.31c0-0.55,0.22-1.09,0.64-1.46 C18.09,13.95,19,12.08,19,10C19,6.13,15.87,3,12,3z M14,19h-4v-1h4V19z M14,17h-4v-1h4V17z M12.5,11.41V14h-1v-2.59L9.67,9.59 l0.71-0.71L12,10.5l1.62-1.62l0.71,0.71L12.5,11.41z"/></g></svg>
+                        <p sclass="spotlight-description"> - this is where your favorite tweets are saved</p>
+                    </div>
+                    <p class="spotlight-body">As a logged in user, you can save and view your favorite tweets later.<br><br>You have a limit of 20 collections. There is no limit on the number of tweets you can save to a collection at this time.<br><br><span class="small">*In order not to violate Twitty privacy policy, tweet contents are not cached, only the tweet references are. Hence, if a user deletes a tweet or make their account private, you will no longer have access to that tweet.<span></p>
+                </div>
+                <div class="about-page-spotlight">
+                    <div class="spotlight-header">
+                        <svg class="light-bulb" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24"><g><rect fill="none" height="24" width="24"/></g><g><g/><path d="M12,3c-0.46,0-0.93,0.04-1.4,0.14C7.84,3.67,5.64,5.9,5.12,8.66c-0.48,2.61,0.48,5.01,2.22,6.56C7.77,15.6,8,16.13,8,16.69 V19c0,1.1,0.9,2,2,2h0.28c0.35,0.6,0.98,1,1.72,1s1.38-0.4,1.72-1H14c1.1,0,2-0.9,2-2v-2.31c0-0.55,0.22-1.09,0.64-1.46 C18.09,13.95,19,12.08,19,10C19,6.13,15.87,3,12,3z M14,19h-4v-1h4V19z M14,17h-4v-1h4V17z M12.5,11.41V14h-1v-2.59L9.67,9.59 l0.71-0.71L12,10.5l1.62-1.62l0.71,0.71L12.5,11.41z"/></g></svg>
+                        <p sclass="spotlight-description"> - about twtr · spotlight</p>
+                    </div>
+                    <p class="spotlight-body">twtr · spotlight is an app that simplifies searching for tweets on Twitter. You can search for tweets of different kinds in different languages. You can also use the timeline search to get tweets from a specific user.<br><br>You can save tweets to collections to view later.</p>
+                </div>
+                <div class="home-page-spotlight">
+                    <div class="spotlight-header">
+                        <svg class="light-bulb" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24"><g><rect fill="none" height="24" width="24"/></g><g><g/><path d="M12,3c-0.46,0-0.93,0.04-1.4,0.14C7.84,3.67,5.64,5.9,5.12,8.66c-0.48,2.61,0.48,5.01,2.22,6.56C7.77,15.6,8,16.13,8,16.69 V19c0,1.1,0.9,2,2,2h0.28c0.35,0.6,0.98,1,1.72,1s1.38-0.4,1.72-1H14c1.1,0,2-0.9,2-2v-2.31c0-0.55,0.22-1.09,0.64-1.46 C18.09,13.95,19,12.08,19,10C19,6.13,15.87,3,12,3z M14,19h-4v-1h4V19z M14,17h-4v-1h4V17z M12.5,11.41V14h-1v-2.59L9.67,9.59 l0.71-0.71L12,10.5l1.62-1.62l0.71,0.71L12.5,11.41z"/></g></svg>
+                        <p sclass="spotlight-description"> - this is the main search page</p>
+                    </div>
+                    <p class="spotlight-body">You can search for anything on Twitter right here. From topics to hastags, videos, photos, etc. - just type in the search keyword(s).<br><br>You can select the language and the type of tweet you want.</p>
+                </div>
+            </div>
         </div>
-    </main>         
+    </main>
+    <footer>
+        <p class="big-footer">
+            <span>Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a>  ::  </span><span>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></span>
+        </p>
+        <div class="made-by-mobile">
+            <p class="made-by">Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a></p>
+            <p>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></p>
+        </div>
+    </footer>        
 </body>
 
 </html>
