--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
     <script src="build/jwt-decode.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
-    <script type="module" src="index.js" defer></script>
+    <!-- <script type="module" src="index.js" defer></script> -->
+    <script type="module" src="script.js" defer></script>
     <script type="module" src="/src/scripts/validators.js"></script>
 
     <title>Document</title>
 </head>
 
 <body ontouchstart="">
+    <div class="root">
     <span class="loader hide"></span>
     <!-- Modals -->
 
     <div class = "screen-fade hide"></div>
 
     <div class="media-modal modal hide">
-        <svg class="media-modal-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+        <svg class="media-modal-close clos" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
         <div class="media">
             <!-- <img src="./assets/lightning-5511473_640.jpg" alt=""> -->
         </div>
@@ -99,7 +101,7 @@
                 </div>
                 <div class="user-auth-div modal hide">
                     <div class="login-div hide">
-                        <svg class="login-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                        <svg class="login-div-close close auth-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <p class="auth-header">Sign in to your account</p>                          
                         <input type="text" name="login-email" class="login-email" placeholder="Email">
                         <label class="login-email-label" for="login-email">Email:</label>                           
@@ -111,7 +113,7 @@
                         <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the twtr  &middot; spotlight app.</p>
                     </div>
                     <div class="signup-div hide">
-                        <svg class="signup-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                        <svg class="signup-div-close close auth-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <p class="auth-header">Create a new account</p>              
                         <input type="text" name="signup-name" class="signup-name" placeholder="Name">
                         <label class="signup-name-label" for="signup-name">Name:</label>            
@@ -127,7 +129,7 @@
                         <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the twtr  &middot; spotlight app.</p>
                     </div>
                     <div class="logout-div hide">
-                        <svg class="logout-div-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                        <svg class="logout-div-close close auth-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <button class="logout-btn">Log out</button>
                     </div>
                 </div>
@@ -331,7 +333,8 @@
             <p class="made-by">Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a></p>
             <p>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></p>
         </div>
-    </footer>        
+    </footer> 
+</div>       
 </body>
 
 </html>
